more styles updates

--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
       <div class="container">
         <div class="results-container card">
           <span class="res head">Your Result</span>
-          <span class="avrg-score">76 of 100</span>
+          <span class="avrg-score">
+            <span class="bg-span">76</span> of 100</span
+          >
           <div class="description">
-            <span>Great</span>
-            <span>
+            <span class="bg-span">Great</span>
+            <p>
               You scored higher than 65% of the people who have taken these
               tests.
-            </span>
+            </p>
           </div>
         </div>
         <div class="sum-btn-container card">
@@ -75,7 +77,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://www.linkedin.com/in/molokochris" target="_blank"
+        >Moloko Chris Poopedi</a
+      >.
     </div>
   </body>
 </html>
