--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="results-container card">
           <span class="res head">Your Result</span>
           <span class="avrg-score">
-            <span class="bg-span">76</span> of 100</span
+            <span class="average">76</span>
+            <span class="sub-text">of 100</span></span
           >
           <div class="description">
             <span class="bg-span">Great</span>
@@ -52,23 +53,21 @@
           <div class="head summary">Summary</div>
           <div class="tab reaction-tab">
             <span class="reaction">Reaction</span>
-            <span class="">80 / 100</span>
+            <span class="score">80 / 100</span>
           </div>
           <div class="tab memory-tab">
             <span class="memory">Memory</span>
-            <span class="">92 / 100</span>
+            <span class="score">92 / 100</span>
           </div>
           <div class="tab verbal-tab">
             <span class="verbal">Verbal</span>
-            <span class="">61 / 100</span>
+            <span class="score">61 / 100</span>
           </div>
           <div class="tab visual-tab">
             <span class="visual">Visual</span>
-            <span>72 / 100</span>
+            <span class="score">72 / 100</span>
           </div>
-          <div>
-            <button>Continue</button>
-          </div>
+          <button class="btn">Continue</button>
         </div>
       </div>
     </div>
