--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
           </div>
         </div>
         <div class="sum-btn-container card">
-          <div class="head summary">Summary</div>
+          <div class="head">
+            <span class="summary">Summary</span>
+          </div>
           <div class="tab reaction-tab">
             <span class="reaction">Reaction</span>
             <span class="score">80 / 100</span>
