--- a/index.html
+++ b/index.html
@@ -50,24 +50,32 @@
           </div>
         </div>
         <div class="sum-btn-container card">
-          <div class="head">
-            <span class="summary">Summary</span>
+          <div class="summary">
+            <span class="">Summary</span>
           </div>
           <div class="tab reaction-tab">
             <span class="reaction">Reaction</span>
-            <span class="score">80 / 100</span>
+            <span class="score"
+              ><span class="variable-score">80</span> / 100</span
+            >
           </div>
           <div class="tab memory-tab">
             <span class="memory">Memory</span>
-            <span class="score">92 / 100</span>
+            <span class="score"
+              ><span class="variable-score">92</span> / 100</span
+            >
           </div>
           <div class="tab verbal-tab">
             <span class="verbal">Verbal</span>
-            <span class="score">61 / 100</span>
+            <span class="score"
+              ><span class="variable-score">61</span> / 100</span
+            >
           </div>
           <div class="tab visual-tab">
             <span class="visual">Visual</span>
-            <span class="score">72 / 100</span>
+            <span class="score"
+              ><span class="variable-score">72</span> / 100</span
+            >
           </div>
           <button class="btn">Continue</button>
         </div>
