--- a/index.html
+++ b/index.html
@@ -54,25 +54,31 @@
             <span class="">Summary</span>
           </div>
           <div class="tab reaction-tab">
+            <img class="icons" src="./assets/images/icon-reaction.svg" alt="" />
             <span class="reaction">Reaction</span>
             <span class="score"
               ><span class="variable-score">80</span> / 100</span
             >
           </div>
           <div class="tab memory-tab">
+            <img class="icons" src="./assets/images/icon-memory.svg" alt="" />
             <span class="memory">Memory</span>
             <span class="score"
               ><span class="variable-score">92</span> / 100</span
             >
           </div>
           <div class="tab verbal-tab">
+            <img class="icons" src="./assets/images/icon-verbal.svg" alt="" />
             <span class="verbal">Verbal</span>
             <span class="score"
               ><span class="variable-score">61</span> / 100</span
             >
           </div>
           <div class="tab visual-tab">
-            <span class="visual">Visual</span>
+            <img class="icons" src="./assets/images/icon-visual.svg" alt="" />
+            <span class="visual">
+              Visual</span
+            >
             <span class="score"
               ><span class="variable-score">72</span> / 100</span
             >
