--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="./assets/fonts/HankenGrotesk-VariableFont_wght.ttf"
+      rel="fonts"
+    />
 
     <title>Frontend Mentor | Results summary component</title>
 
@@ -76,9 +80,7 @@
           </div>
           <div class="tab visual-tab">
             <img class="icons" src="./assets/images/icon-visual.svg" alt="" />
-            <span class="visual">
-              Visual</span
-            >
+            <span class="visual"> Visual</span>
             <span class="score"
               ><span class="variable-score">72</span> / 100</span
             >
